# chip8_interpreter

./: .gitignore  Cargo.toml  README.md  build.rs  changes.patch
src/: constants.rs  cpu.rs  machine.rs  main.rs  rom.rs  utils.rs
src/machine/: audio.rs  display.rs  keyboard.rs  mod.rs
tests/cpu/: cpu_tests.rs  opcode_tests.rs
tests/helpers/: opcode_helper.rs
