[package]
name = "chip8_interpreter"
version = "0.1.0"
edition = "2021"
authors = ["Bradyn Glines <glinesbdev@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
sdl2 = { version = "0.35.2", features = ["bundled"] }

[dev-dependencies]
all_asserts = "2.3.1"
