[package]
name = "chip8_interpreter"
version = "0.1.0"
edition = "2021"
authors = ["Bradyn Glines <glinesbdev@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colors-transform = "0.2.11"
glow = "0.10.0"
imgui = "0.10.0"
imgui-glow-renderer = "0.10.0"
imgui-sdl2-support = "0.10.0"
rand = "0.8.5"
reqwest = { version = "0.11.14", features = ["blocking", "json"] }
sdl2 = { version = "^0.34.5", features = ["bundled"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
snailquote = "0.3.1"

[dev-dependencies]
all_asserts = "2.3.1"
